# SouljaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  dependencies.txt
apps/client/: main.cpp
apps/gui/: main.cpp
apps/server/: main.cpp
apps/soulja_client/: main.c
apps/soulja_game/: main.c
apps/soulja_server/: main.c
apps/soulja_test/: main.c
assets/shaders/: fSolid.glsl  triangle_fragment_sh.glsl  triangle_shader.glsl  triangle_vertex_sh.glsl  v3D.glsl
internal/client/: Client.hpp
internal/client/animation/: rotation.hpp
internal/client/component/: AdminCommand.hpp  Camera.hpp  Core.hpp  MatRef.hpp  MeshRef.hpp
internal/client/core/: EntityManager.hpp  EntityUpdater.hpp  Mesh.hpp  MeshManager.hpp  ModelManager.hpp  Object.hpp  Renderer.hpp  Scene.hpp  ShaderProgramManager.hpp  defines.hpp  sh_src.hpp
internal/client/core/Mesh/: TriangleMesh.hpp
internal/client/core/Object/: ObjectFactory.hpp  SolidTriangle.hpp
internal/client/core/cameras/: CameraBase.h
internal/client/core/generator/: GridPlane.hpp
internal/client/core/scenes/: BaseScene.hpp  Renderer.hpp
internal/client/editor/: gui.hpp
internal/client/entity/: Triangle.hpp
internal/client/generator/: GridPlane.hpp
internal/client/gfx/: Mesh.hpp
internal/client/platform/: Window.hpp
internal/client/rendering/: GpuPrimitive.hpp  Mesh.hpp  Model.hpp  ModelLoader.hpp  Node.hpp
internal/client/spawn/: Spawn.hpp  Triangle.hpp
internal/client/systems/: Camera.hpp  Debug.hpp  GatherPlayerInput.hpp  GatherUserInput.hpp  Init.hpp  MeshLoading.hpp  Networking.hpp  PlayerControllable.hpp  Render.hpp  RenderUtils.hpp  Transform.hpp  UserControl.hpp
internal/client/utils/: Model.hpp
internal/client/utils/assets/: helpers.hpp
internal/client/utils/gl/: helpers.hpp
internal/server/: NetBus.hpp  NetIO.hpp  NetMsg.hpp  ReplyPayload.hpp  Scene.hpp  Server.hpp  Session.hpp  SessionManager.hpp
internal/soulja_client_lib/: camera.h  config.h  mouse.h  setup.h  shader_helpers.h
internal/soulja_lib/: cell.h  cell_unit_capacity.h  floor_type.h  game_state.h  grid.h  macros.h  map.h  obstacle.h  unit.h
internal/soulja_shared/: world_generation.h
src/: game_state.c  grid.c
src/client/: Client.cpp  camera.c  config.c  mouse.c  setup.c  shader_helpers.c
src/client/editor/: gui.cpp
src/client/rendering/: GpuPrimitive.cpp  ModelLoader.cpp
src/client/systems/: Debug.cpp  GatherUserInput.cpp  Init.cpp  MeshLoading.cpp  Render.cpp  Transform.cpp  UserControl.cpp
src/client/utils/assets/: helpers.cpp
src/client/utils/gl/: helpers.cpp
src/internal/: cell.h  game_state.h  grid.h  map.h  obstacle.h  soulja_engine.h
src/server/: NetBus.cpp  NetIO.cpp  ReplyPayload.cpp  Server.cpp  SessionManager.cpp  game_state.c  map.c
src/shared/: world_generation.c
thirdpartypoopers/glad/: CMakeLists.txt
thirdpartypoopers/glad/include/glad/: glad.h
thirdpartypoopers/glad/src/: glad.c
